Setting, branch functionality, minor fixes
